--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -4,36 +4,34 @@ $font-400: 400;
 $font-600: 600;
 $font-700: 700;
 
-html {
+html[data-theme="light"] {
 
     --bg-primary: #F6F6F6;
     --bg-secondary: #F0F0F0;
     --bg-tertiary: #E0E0E0;
-
+    
     --tg-primary: #101010;
     --tg-secondary: #131313;
-
+    
     --gr-primary: #0B3612;
     --gr-primary-rgb: 11, 54, 18;
     --gr-secondary: #347542;
     --gr-secondary-rgb: 52, 117, 66;
-
+    
     --er-outline: #CECECE;
+}
 
-    &[data-theme="dark"] {
+html[data-theme="dark"] {
 
-        --bg-primary: #161616;
-        --bg-secondary: #131313;
-        --bg-tertiary: #101010;
+    --bg-primary: #161616;
+    --bg-secondary: #131313;
+    --bg-tertiary: #101010;
 
-        --tg-primary: #F0F0F0;
-        --tg-secondary: #CCCCCC;
+    --tg-primary: #F0F0F0;
+    --tg-secondary: #CCCCCC;
 
-        --gr-primary: #347542;
-        --gr-secondary: #46A35A;
+    --gr-primary: #347542;
+    --gr-secondary: #46A35A;
 
-        --er-outline: #202020;
-
-    }
-
+    --er-outline: #202020;
 }
